--- a/portfolio.html
+++ b/portfolio.html
@@ -19,30 +19,30 @@
 
 <body>
     <!-- ---Шапка сайта----- -->
-<header class="site">
-    <div class="conteiner">
-        <nav class="nav-studio">
-            <a href="" class="logo link"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-            <ul class="site-nav list">
-                <li class="site-item"><a href="./index.html" class="link ">Студия</a></li>
-                <li class="site-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li class="site-item"><a href="" class="link">Контакты</a></li>
-            </ul>
+    <header class="site">
+        <div class="conteiner">
+        <a href="" class="logo site__logo link"><span class="site__logo-web">Web</span><span class="site__logo-studio">Studio</span></a>
+        <nav class="navigation"> 
+            <ul class="menu-list list"> 
+            <li class="menu-list__item"><a href="./index.html" class="menu-list__link link ">Студия</a></li>
+            <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link link current">Портфолио</a></li>
+            <li class="menu-list__item"><a href="" class="menu-list__link link">Контакты</a></li>
+        </ul>
         </nav>
         <ul class="contacts-nav list">
-            <li class="contacts-item">
+            <li class="contacts-nav__item">
                 <a href="emailto:info@devstudio.com" class="site-mail link">
-                    <svg class="envelope" width="16" height="12">
+                    <svg class="site-mail__icon" width="16" height="12">
                         <use href="./images/symbol-defs.svg#icon-envelope-hover-1"></use>
                     </svg>info@devstudio.com</a></li>
-            <li class="contacts-item">
+            <li class="contacts-nav__item">
                 <a href="tel:+380961111111" class="site-tel link">
-                    <svg class="smartphone" width="10" height="16">
+                    <svg class="site-tel__icon" width="10" height="16">
                         <use href="./images/symbol-defs.svg#icon-smartphone-1"></use>
                     </svg>+38 096 111 11 11</a></li>
         </ul>
-    </div>
-</header>
+        </div>
+        </header>
     <!-- main -->
     <section class="section">
         <div class="conteiner">
@@ -187,70 +187,74 @@
     <footer class="contacts">
         <div class="conteiner">
             <div class="contacts-main">
-                <a href="" class="contacts-link link"><span class="contacts-web">Web</span><span class="contacts-studio">Studio</span></a>
-                <address class="contacts-adress">
-                    <ul class="contacts-list list">
-                        <li class="contact-item"><a href="https://goo.gl/maps/Rb4ZCrecxtzZJU7x7" target="_blank"
-                                rel="noopener noreferrer nofollow" class="contacts-link-adress"></a>г. Киев, пр-т Леси Украинки, 26
-                        </li>
-                        <li class="contact-item"><a href="mailto:info@example.com" class="contacts-link-mail link">info@example.com</a></li>
-                        <li class="contact-item"><a href="tel:+380991111111" class="contacts-link-tel link">+38 099 111 11 11</a></li>
-                    </ul></address>
-                </div>
+        <a href="" class="contacts-link link"><span class="contacts-link__web">Web</span><span class="contacts-link__studio">Studio</span></a>
+        <address class="contacts-adress">
+            <ul class="contacts-list list">
+                <li class="contacts-list__item">
+                    <a href="https://goo.gl/maps/Rb4ZCrecxtzZJU7x7" target="_blank"
+                        rel="noopener noreferrer nofollow" class="contacts-link-adress"></a>г. Киев, пр-т Леси Украинки, 26
+                </li>
+                <li class="contacts-list__item">
+                    <a href="mailto:info@example.com" class="contacts-link-mail link">info@example.com</a></li>
+                <li class="contacts-list__item">
+                    <a href="tel:+380991111111" class="contacts-link-tel link">+38 099 111 11 11</a></li>
+            </ul></address>
+        </div>
+
+        <!-- Присоединяйтесь -->
             <div class="contacts-soc">
-            <h3 class="contacts-soc-title">присоединяйтесь</h3>
+            <h3 class="contacts-soc__title">присоединяйтесь</h3>
             <ul class="contacts-soc-list list">
-                <li class="contacts-soc-item">
+                <li class="contacts-soc-list__item">
                     <a href="" class="contacts-soc-link">
-                        <svg class="contacts-soc-icon" width="20" height="20">
+                        <svg class="contacts-soc-link__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                         </svg>
                 </a>
             </li>
-                <li class="contacts-soc-item">
+                <li class="contacts-soc-list__item">
                     <a href="" class="contacts-soc-link">
-                        <svg class="contacts-soc-icon" width="20" height="20">
+                        <svg class="contacts-soc-link__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="contacts-soc-item">
+                <li class="contacts-soc-list__item">
                     <a href="" class="contacts-soc-link">
-                        <svg class="contacts-soc-icon" width="20" height="20">
+                        <svg class="contacts-soc-link__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="contacts-soc-item">
+                <li class="contacts-soc-list__item">
                     <a href="" class="contacts-soc-link">
-                        <svg class="contacts-soc-icon" width="20" height="20">
+                        <svg class="contacts-soc-link__icon" width="20" height="20">
                             <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
             </div>
-        </address>
-        <!-- ------------Подписка---------- -->
-        <form class="subscription-form">
-            <label class="thumb-text subscription-label" for="subscription">Подпишитесь на рассылку</label>
+            <!-- ------------Подписка---------- -->
+             <form class="subscription-form">
+                 <label class="thumb-text subscription-label" for="subscription">Подпишитесь на рассылку</label>
 <div class="subscription-box">
 <input class="subscription-input"
 type="text" 
-name="subscription"
+ name="subscription"
 id="subscription"
 placeholder="E-mail"
 required/>
-<button type="submit" class="subscription-btn button">Подписаться
-   <svg class="submit-icon" width="24" height="24">
-       <use href="./images/symbol-defs.svg#icon-icon-send"></use>
-   </svg>
-</button>
+    <button type="submit" class="subscription-btn button">Подписаться
+        <svg class="submit-icon" width="24" height="24">
+            <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+        </svg>
+    </button>
 </div>
 </form>
         </div>
-        
     </footer>
+
 </body>
 
 </html>
